--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <title>Botkit Anywhere</title>
+        <!-- <title>Shingeki no ChatBot</title> -->
+        <title>進撃の ChatBot</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.min.js"></script>
         <script src="https://cdn.rawgit.com/showdownjs/showdown/1.7.4/dist/showdown.min.js"></script>
         <link rel="stylesheet" href="/css/styles.css" />
@@ -16,8 +17,16 @@
             <div class="offline">
                 Offline! Reload to reconnect.
             </div>
-            <div class="powered_by">
-              Powered by <a href="https://botkit.ai" target="_blank" title="Building Blocks for Building Bots"><img src="/botkit_icon.png" width="15" height="15" alt="Botkit Logo" /> Botkit</a>
+            <!-- <div class="powered_by"> -->
+            <div class="navbar">
+              <!-- Powered by <a href="https://botkit.ai" target="_blank" title="Building Blocks for Building Bots"><img src="/botkit_icon.png" width="15" height="15" alt="Botkit Logo" /> Botkit</a> -->
+              <img src="../assets/7a572c4ead5da6c515741c26ee30f1d7.jpg" alt="Wings of Freedom" class="logo">
+
+              <div class="portfolio">
+                <a href="" target="_blank">Eric</a>
+                <a href="https://nick-cheung.com/" target="_blank"> Nick</a>
+                <a href="" target="_blank">Try</a>
+              </div>
             </div>
             <section>
                 <div id="message_list">
