--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
     <head>
         <!-- <title>Shingeki no ChatBot</title> -->
         <title>進撃の ChatBot</title>
+        <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/cowfish813/MintBeanHackathon/main/assets/7a572c4ead5da6c515741c26ee30f1d7.jpg" />
+        
         <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.min.js"></script>
         <script src="https://cdn.rawgit.com/showdownjs/showdown/1.7.4/dist/showdown.min.js"></script>
         <link rel="stylesheet" href="/css/styles.css" />
@@ -20,12 +22,13 @@
             <!-- <div class="powered_by"> -->
             <div class="navbar">
               <!-- Powered by <a href="https://botkit.ai" target="_blank" title="Building Blocks for Building Bots"><img src="/botkit_icon.png" width="15" height="15" alt="Botkit Logo" /> Botkit</a> -->
-              <img src="../assets/7a572c4ead5da6c515741c26ee30f1d7.jpg" alt="Wings of Freedom" class="logo">
-
-              <div class="portfolio">
-                <a href="" target="_blank">Eric</a>
-                <a href="https://nick-cheung.com/" target="_blank"> Nick</a>
-                <a href="" target="_blank">Try</a>
+              <a target="_blank" onClick="window.location.reload()" class="left">
+                <img class="logo" src="https://raw.githubusercontent.com/cowfish813/MintBeanHackathon/main/assets/7a572c4ead5da6c515741c26ee30f1d7.jpg" alt="Wings of Freedom">
+              </a>
+              <div class="portfolios">
+                <a class="portfolio" href="" target="_blank" >Eric</a>
+                <a class="portfolio" href="https://nick-cheung.com/" target="_blank" > Nick</a>
+                <a class="portfolio" href="" target="_blank" >Try</a>
               </div>
             </div>
             <section>
