--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
             <!-- <div class="powered_by"> -->
             <div class="navbar">
               <!-- Powered by <a href="https://botkit.ai" target="_blank" title="Building Blocks for Building Bots"><img src="/botkit_icon.png" width="15" height="15" alt="Botkit Logo" /> Botkit</a> -->
-              <a target="_blank" onClick="window.location.reload()" class="left">
+              <a class="logoContainer" target="_blank" onClick="window.location.reload()" class="left">
                 <img class="logo" src="https://raw.githubusercontent.com/cowfish813/MintBeanHackathon/main/assets/7a572c4ead5da6c515741c26ee30f1d7.jpg" alt="Wings of Freedom">
               </a>
               <div class="portfolios">
