--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
         <!-- <title>Shingeki no ChatBot</title> -->
         <title>進撃の ChatBot</title>
         <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/cowfish813/MintBeanHackathon/main/assets/7a572c4ead5da6c515741c26ee30f1d7.jpg" />
-        
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.min.js"></script>
         <script src="https://cdn.rawgit.com/showdownjs/showdown/1.7.4/dist/showdown.min.js"></script>
         <link rel="stylesheet" href="/css/styles.css" />
@@ -25,6 +25,7 @@
               <a class="logoContainer" target="_blank" onClick="window.location.reload()" class="left">
                 <img class="logo" src="https://raw.githubusercontent.com/cowfish813/MintBeanHackathon/main/assets/7a572c4ead5da6c515741c26ee30f1d7.jpg" alt="Wings of Freedom">
               </a>
+              
               <div class="portfolios">
                 <a class="portfolio" href="" target="_blank" >Eric</a>
                 <a class="portfolio" href="https://nick-cheung.com/" target="_blank" > Nick</a>
