--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,10 @@
     <head>
         <!-- <title>Shingeki no ChatBot</title> -->
         <title>進撃の ChatBot</title>
-        <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/cowfish813/MintBeanHackathon/main/assets/7a572c4ead5da6c515741c26ee30f1d7.jpg" />
-        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+        <link rel="icon" type="image/png" href="../assets/imgbin-skynet-logo-cyberdyne-systems-robot-cyberdyne-inc-robot-RZEp0BubCMLQNN6EK5eWwwz6M.jpg" />
+
+        <link alt="googleFont" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+        
         <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.min.js"></script>
         <script src="https://cdn.rawgit.com/showdownjs/showdown/1.7.4/dist/showdown.min.js"></script>
         <link rel="stylesheet" href="/css/styles.css" />
@@ -14,7 +16,7 @@
 
         <div id="message_window">
             <div class="disconnected">
-                Disconnected... reconnecting!
+                Connecting to SkyNet Uplink!
             </div>
             <div class="offline">
                 Offline! Reload to reconnect.
@@ -23,16 +25,16 @@
             <div class="navbar">
               <!-- Powered by <a href="https://botkit.ai" target="_blank" title="Building Blocks for Building Bots"><img src="/botkit_icon.png" width="15" height="15" alt="Botkit Logo" /> Botkit</a> -->
               <a class="logoContainer" target="_blank" onClick="window.location.reload()" class="left">
-                <img class="logo" src="https://raw.githubusercontent.com/cowfish813/MintBeanHackathon/main/assets/7a572c4ead5da6c515741c26ee30f1d7.jpg" alt="Wings of Freedom">
+                <img class="logo" href="../assets/imgbin-skynet-logo-cyberdyne-systems-robot-cyberdyne-inc-robot-RZEp0BubCMLQNN6EK5eWwwz6M.jpg" alt="Cyberdene">
               </a>
-              
-              <div class="portfolios">
-                <a class="portfolio" href="" target="_blank" >Eric</a>
+              <h1 class="">Skynet Terminal Uplink</h1>
+              <!-- <div class="portfolios">
+                <a class="portfolio" href="https://www.ericho.net" target="_blank" >Eric</a>
                 <a class="portfolio" href="https://nick-cheung.com/" target="_blank" > Nick</a>
-                <a class="portfolio" href="" target="_blank" >Try</a>
-              </div>
+                <a class="portfolio" href="https://trykhov.com/" target="_blank" >Try</a>
+              </div> -->
             </div>
-            <section>
+            <section class="terminal">
                 <div id="message_list">
                     <div id="message_template">
                         <div class="message {{message.type}}">
@@ -65,7 +67,7 @@
             </div>
             <footer>
                 <form onsubmit="Botkit.send(Botkit.input.value, event)">
-                    <input type="text" autocomplete="off" id="messenger_input" placeholder="Type here..." />
+                    <input class="commandLine" type="text" autocomplete="off" id="messenger_input" placeholder="Type Commands Here..." />
                     <button type="submit">Send</button>
                 </form>
             </footer>
