--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,10 @@
 <html>
     <head>
         <!-- <title>Shingeki no ChatBot</title> -->
-        <title>進撃の ChatBot</title>
-        <link rel="icon" type="image/png" href="../assets/imgbin-skynet-logo-cyberdyne-systems-robot-cyberdyne-inc-robot-RZEp0BubCMLQNN6EK5eWwwz6M.jpg" />
-
-        <link alt="googleFont" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-        
+        <!-- <title>進撃の ChatBot</title> -->
+        <title>SkyLink</title>
+        <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/cowfish813/MintBeanHackathon/main/assets/imgbin-skynet-logo-cyberdyne-systems-robot-cyberdyne-inc-robot-RZEp0BubCMLQNN6EK5eWwwz6M.png" />
+        <!-- <link alt="googleFont" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.min.js"></script>
         <script src="https://cdn.rawgit.com/showdownjs/showdown/1.7.4/dist/showdown.min.js"></script>
         <link rel="stylesheet" href="/css/styles.css" />
@@ -25,9 +24,9 @@
             <div class="navbar">
               <!-- Powered by <a href="https://botkit.ai" target="_blank" title="Building Blocks for Building Bots"><img src="/botkit_icon.png" width="15" height="15" alt="Botkit Logo" /> Botkit</a> -->
               <a class="logoContainer" target="_blank" onClick="window.location.reload()" class="left">
-                <img class="logo" href="../assets/imgbin-skynet-logo-cyberdyne-systems-robot-cyberdyne-inc-robot-RZEp0BubCMLQNN6EK5eWwwz6M.jpg" alt="Cyberdene">
+                <img class="logo" alt="Cyberdyne" src="https://raw.githubusercontent.com/cowfish813/MintBeanHackathon/main/assets/imgbin-skynet-logo-cyberdyne-systems-robot-cyberdyne-inc-robot-RZEp0BubCMLQNN6EK5eWwwz6M.png">
               </a>
-              <h1 class="">Skynet Terminal Uplink</h1>
+              <p class="">Skynet Terminal Uplink</p>
               <!-- <div class="portfolios">
                 <a class="portfolio" href="https://www.ericho.net" target="_blank" >Eric</a>
                 <a class="portfolio" href="https://nick-cheung.com/" target="_blank" > Nick</a>
