--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
               <a class="logoContainer" target="_blank" onClick="window.location.reload()" class="left">
                 <img class="logo" alt="Cyberdyne" src="https://raw.githubusercontent.com/cowfish813/MintBeanHackathon/main/assets/imgbin-skynet-logo-cyberdyne-systems-robot-cyberdyne-inc-robot-RZEp0BubCMLQNN6EK5eWwwz6M.png">
               </a>
-              <p class="">Skynet Terminal Uplink</p>
+              <p class="navbar_title">Skynet Terminal Uplink</p>
               <!-- <div class="portfolios">
                 <a class="portfolio" href="https://www.ericho.net" target="_blank" >Eric</a>
                 <a class="portfolio" href="https://nick-cheung.com/" target="_blank" > Nick</a>
