--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
                 <a class="logoContainer" target="_blank" onClick="window.location.reload()" class="left">
                   <img class="logo" alt="Cyberdyne" src="https://raw.githubusercontent.com/cowfish813/MintBeanHackathon/main/assets/imgbin-skynet-logo-cyberdyne-systems-robot-cyberdyne-inc-robot-RZEp0BubCMLQNN6EK5eWwwz6M.png">
                 </a>
-                <p class="navbar_title">Skynet Terminal Uplink</p>
+                <p class="navbar_title">Skynet Terminal Uplink.................100%</p>
               </div>
               <div id="help">?</div>
 
