--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,11 @@
                 Readme
               </div>
               <div class="readmeContent">
-                <li>sdfgsdfgsfd</li>
-                <li></li>
+                <li class="readmeLi">Utilize any of the buttons below</li>
+                <li class="readmeLi">Typing in Keywords are acceptable</li>
+                <li class="readmeLi">The future is actively being written</li>
+                <p class="signature">Fight For it</p>
+                <p class="signature"> - John Connor</p>
               </div>
 
            </div>
