--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
                 <a class="logoContainer" target="_blank" onClick="window.location.reload()" class="left">
                   <img class="logo" alt="Cyberdyne" src="https://raw.githubusercontent.com/cowfish813/MintBeanHackathon/main/assets/imgbin-skynet-logo-cyberdyne-systems-robot-cyberdyne-inc-robot-RZEp0BubCMLQNN6EK5eWwwz6M.png">
                 </a>
-                <p class="navbar_title">Skynet Terminal Uplink . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . 100% Complete</p>
+                <p class="navbar_title">Skynet Terminal Uplink  . . . . . . . . . . . . . . . . . . . . . . . . . . . . 100% Complete</p>
               </div>
               <div id="help">?</div>
               <!-- create modal out of help -->
@@ -41,9 +41,12 @@
               <div class="readmeContent">
                 <li class="readmeLi">Utilize any of the buttons below</li>
                 <li class="readmeLi">Typing in Keywords are acceptable</li>
-                <li class="readmeLi">The future is actively being written</li>
-                <p class="signature">Fight For it</p>
-                <p class="signature"> - John Connor</p>
+                <li class="readmeLi">"The unknown future rolls toward us. I face it, for the first time, with a sense of hope. Because if a machine, a
+                Terminator, can learn the value of human life, maybe we can too."</li>
+                <div class="signOff">
+                  <p class="signature">Fight For it</p>
+                  <p class="signature"> - John Connor</p>
+                </div>
               </div>
 
            </div>
